# word-learner-discord-bot

./: .env  .example.env  .gitignore  Cargo.toml  deno.json  main.ts
src/: dice.rs  main.rs  words.rs
